Добавлена документация. Добавлена возможность работы с Localization в методе onInit контроллера